Update LinkedIn link to point to the profile

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="title">IT Support • Student</div>
       <div class="icons">
         <a href="#" aria-label="GitHub">GitHub</a>
-        <a href="#" aria-label="LinkedIn">LinkedIn</a>
+        <a href="https://www.linkedin.com/in/tarikgungor" target="_blank">LinkedIn</a>
       </div>
     </div>
 
