Update GitHub link to point to user's profile

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="name">Tarık Gungor</div>
       <div class="title">IT Support • Student</div>
       <div class="icons">
-        <a href="#" aria-label="GitHub">GitHub</a>
+        <a href="https://github.com/gungortarik" target="_blank">GitHub</a>
         <a href="https://www.linkedin.com/in/tarikgungor" target="_blank">LinkedIn</a>
       </div>
     </div>
