--- a/index.html
+++ b/index.html
@@ -7,16 +7,25 @@
   <meta name="description" content="Personal website of Tarık Gungor." />
   <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
+
   <header class="top">
-    <div class="avatar"></div>
+
+    <img src="profile.jpg" alt="Tarık Gungor" class="avatar-img">
 
     <div class="right">
       <div class="name">Tarık Gungor</div>
       <div class="title">IT Support • Student</div>
+
       <div class="icons">
-        <a href="https://github.com/gungortarik" target="_blank">GitHub</a>
-        <a href="https://www.linkedin.com/in/tarikgungor" target="_blank">LinkedIn</a>
+        <a href="https://github.com/gungortarik" target="_blank" rel="noopener">
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" width="22" alt="GitHub">
+        </a>
+
+        <a href="https://www.linkedin.com/in/tarikgungor/" target="_blank" rel="noopener">
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" width="22" alt="LinkedIn">
+        </a>
       </div>
     </div>
 
@@ -25,40 +34,56 @@
       <a href="#projects">Projects</a>
       <a href="#contact">Contact</a>
     </nav>
+
   </header>
 
+
   <main class="wrap">
+
     <h1>Hi, I’m Tarık.</h1>
-    <p class="lead">I’m an IT Support Specialist and a student based in Toronto.</p>
+    <p class="lead">
+      I’m an IT Support Specialist and a Computer Systems Technology student based in Toronto.
+    </p>
 
     <section>
       <h2>Professional</h2>
       <p>
-        I enjoy solving real-world problems with practical IT solutions—systems, networks, and troubleshooting.
-        I like learning proven methods and applying them to improve reliability and user experience.
+        I focus on practical IT solutions, systems reliability, networking fundamentals,
+        and troubleshooting real-world technical problems. I enjoy building structured,
+        efficient environments that simply work.
       </p>
     </section>
 
     <section id="projects">
       <h2>Projects</h2>
-      <p>Coming soon.</p>
+      <p>Projects coming soon.</p>
     </section>
 
     <section id="blog">
       <h2>Blog</h2>
-      <p>Coming soon.</p>
+      <p>Blog posts coming soon.</p>
     </section>
 
     <section id="contact">
       <h2>Contact</h2>
-      <p>Email: <a href="mailto:gungortarik@icloud.com">gungortarik@icloud.com</a></p>
+      <p>Email: 
+        <a href="mailto:gungortarik@icloud.com">
+          gungortarik@icloud.com
+        </a>
+      </p>
     </section>
 
     <footer class="foot">
-      <small>© <span id="y"></span> Tarık Gungor • Hosted on GitHub Pages</small>
+      <small>
+        © <span id="y"></span> Tarık Gungor • Hosted on GitHub Pages
+      </small>
     </footer>
+
   </main>
 
-  <script>document.getElementById("y").textContent = new Date().getFullYear();</script>
+  <script>
+    document.getElementById("y").textContent = new Date().getFullYear();
+  </script>
+
 </body>
 </html>
