Add Open Graph meta tags

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   <link rel="icon" type="image/svg+xml" href="assets/img/favicon-v2.svg">
   <meta name="description" content="Tarik Gungor — IT Support & Infrastructure-Focused Technologist. Bridging technology, infrastructure, and real-world business operations." />
   <meta name="theme-color" content="#0e0e0e" />
+  <meta property="og:title" content="Tarik Gungor — IT Support & Infrastructure" />
+  <meta property="og:description" content="IT Support & infrastructure-focused technologist. Projects, experience, and contact." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://gungortarik.github.io/" />
+
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
