Add profile photo

--- a/index.html
+++ b/index.html
@@ -40,20 +40,29 @@
 
   <main id="top">
     <section class="hero">
-      <div class="container">
-        <h1>Tarik Gungor</h1>
-        <div class="title">IT Support &amp; Infrastructure-Focused Technologist</div>
-        <div class="tagline">
-          Bridging technology, infrastructure, and real-world business operations.
-        </div>
-        <div class="location">Toronto, Canada</div>
+  <div class="container hero-wrap">
+    <div class="hero-left">
+      <h1>Tarik Gungor</h1>
+      <div class="title">IT Support &amp; Infrastructure-Focused Technologist</div>
 
-        <div class="actions">
-          <a class="btn primary" href="#projects">View Projects</a>
-          <a class="btn" href="#contact">Contact</a>
-        </div>
+      <p class="tagline">
+        Bridging technology, infrastructure, and real-world business operations.
+      </p>
+
+      <div class="location">Toronto, Canada</div>
+
+      <div class="actions">
+        <a class="btn primary" href="#projects">View Projects</a>
+        <a class="btn" href="#contact">Contact</a>
       </div>
-    </section>
+    </div>
+
+    <div class="hero-right">
+      <img class="avatar" src="assets/img/profile.jpg" alt="Tarik Gungor">
+    </div>
+  </div>
+</section>
+
 
     <section class="section" id="what">
       <div class="container">
