--- a/index.html
+++ b/index.html
@@ -4,21 +4,24 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Tarik Gungor</title>
-  <link rel="icon" type="image/svg+xml" href="assets/img/favicon-v2.svg">
+
+  <link rel="icon" type="image/svg+xml" href="assets/img/favicon-v2.svg" />
+
   <meta name="description" content="Tarik Gungor — IT Support & Infrastructure-Focused Technologist. Bridging technology, infrastructure, and real-world business operations." />
   <meta name="theme-color" content="#0e0e0e" />
+
   <meta property="og:title" content="Tarik Gungor — IT Support & Infrastructure" />
   <meta property="og:description" content="IT Support & infrastructure-focused technologist. Projects, experience, and contact." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://gungortarik.github.io/" />
+  <meta property="og:url" content="https://tarikgungor.com/" />
 
-
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;700;800&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;700;800&display=swap" rel="stylesheet" />
 
   <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
   <header class="topbar">
     <div class="container">
@@ -28,11 +31,24 @@
           <span>Tarik Gungor</span>
         </a>
 
-        <div class="navlinks">
-          <a href="#what">What I Do</a>
-          <a href="#projects">Projects</a>
-          <a href="#experience">Experience</a>
-          <a href="#contact">Contact</a>
+        <div class="nav-right">
+          <div class="navlinks">
+            <a href="#what">What I Do</a>
+            <a href="#projects">Projects</a>
+            <a href="#experience">Experience</a>
+            <a href="#contact">Contact</a>
+          </div>
+
+          <button
+            class="themeToggle"
+            id="themeToggle"
+            type="button"
+            aria-label="Toggle theme"
+            title="Toggle theme"
+          >
+            <span class="icon" aria-hidden="true">☾</span>
+            <span class="label">Dark</span>
+          </button>
         </div>
       </nav>
     </div>
@@ -40,35 +56,35 @@
 
   <main id="top">
     <section class="hero">
-  <div class="container hero-wrap">
-    <div class="hero-left">
-      <h1>Tarik Gungor</h1>
-      <div class="title">IT Support &amp; Infrastructure-Focused Technologist</div>
+      <div class="container hero-wrap">
+        <div class="hero-left">
+          <h1>Tarik Gungor</h1>
+          <div class="title">IT Support &amp; Infrastructure-Focused Technologist</div>
 
-      <p class="tagline">
-        Bridging technology, infrastructure, and real-world business operations.
-      </p>
+          <p class="tagline">
+            Bridging technology, infrastructure, and real-world business operations.
+          </p>
 
-      <div class="location">Toronto, Canada</div>
+          <div class="location">Toronto, Canada</div>
 
-      <div class="actions">
-        <a class="btn primary" href="#projects">View Projects</a>
-        <a class="btn" href="#contact">Contact</a>
+          <div class="actions">
+            <a class="btn primary" href="#projects">View Projects</a>
+            <a class="btn" href="#contact">Contact</a>
+          </div>
+        </div>
+
+        <div class="hero-right">
+          <img class="avatar" src="assets/img/profile.jpg" alt="Tarik Gungor" />
+        </div>
       </div>
-    </div>
-
-    <div class="hero-right">
-      <img class="avatar" src="assets/img/profile.jpg" alt="Tarik Gungor">
-    </div>
-  </div>
-</section>
-
+    </section>
 
     <section class="section" id="what">
       <div class="container">
         <h2>What I Do</h2>
         <p>
-          I support end users, build reliable infrastructure, and bring a practical operations mindset from managing real-world business environments.
+          I support end users, build reliable infrastructure, and bring a practical operations mindset from
+          managing real-world business environments.
         </p>
 
         <div class="grid">
@@ -165,119 +181,105 @@
     </section>
 
     <section class="section" id="experience">
-  <div class="container">
-    <h2>Experience</h2>
-    <p>Professional IT and infrastructure-focused roles.</p>
+      <div class="container">
+        <h2>Experience</h2>
+        <p>Professional IT and infrastructure-focused roles.</p>
 
-    <div class="list">
+        <div class="list">
+          <div class="item">
+            <div class="row">
+              <div class="role">IT Specialist</div>
+              <div class="when">BETA PREP • Toronto • 2024–Present</div>
+            </div>
+            <p>
+              Supporting internal systems, operational workflows, and infrastructure reliability in a hybrid business
+              environment.
+            </p>
+          </div>
 
-      <div class="item">
-        <div class="row">
-          <div class="role">IT Specialist</div>
-          <div class="when">BETA PREP • Toronto • 2024–Present</div>
+          <div class="item">
+            <div class="row">
+              <div class="role">IT Support Specialist</div>
+              <div class="when">Bestof Floor LTD • 2023–Present</div>
+            </div>
+            <p>
+              Network administration support, device management, and day-to-day technical troubleshooting across business
+              operations.
+            </p>
+          </div>
+
+          <div class="item">
+            <div class="row">
+              <div class="role">IT Analyst (Internship)</div>
+              <div class="when">Payment Source • 2023</div>
+            </div>
+            <p>
+              Worked with ManageEngine Endpoint Central and mobile device management systems. Contributed to 50+ device
+              configurations and supported endpoint monitoring and structured device policy deployment.
+            </p>
+          </div>
         </div>
-        <p>
-          Supporting internal systems, operational workflows, and infrastructure reliability 
-          in a hybrid business environment.
-        </p>
       </div>
+    </section>
 
-      <div class="item">
-        <div class="row">
-          <div class="role">IT Support Specialist</div>
-          <div class="when">Bestof Floor LTD • 2023–Present</div>
+    <section class="section" id="education">
+      <div class="container">
+        <h2>Education</h2>
+        <p>Formal training in systems, networking, and IT infrastructure.</p>
+
+        <div class="list">
+          <div class="item">
+            <div class="row">
+              <div class="role">Computer Systems Technology (Advanced Diploma)</div>
+              <div class="when">George Brown College • 2026–Ongoing</div>
+            </div>
+            <p>
+              Focused on systems architecture, networking fundamentals, infrastructure, and applied technical labs.
+            </p>
+          </div>
+
+          <div class="item">
+            <div class="row">
+              <div class="role">Computer &amp; Information Sciences (Support Services)</div>
+              <div class="when">British Columbia Institute of Technology • 2022–2023</div>
+            </div>
+            <p>
+              Practical training in Active Directory, network administration, device support, and enterprise IT
+              environments.
+            </p>
+          </div>
         </div>
-        <p>
-          Network administration support, device management, and day-to-day technical troubleshooting 
-          across business operations.
-        </p>
       </div>
+    </section>
 
-      <div class="item">
-        <div class="row">
-          <div class="role">IT Analyst (Internship)</div>
-          <div class="when">Payment Source • 2023</div>
+    <section class="section" id="technical">
+      <div class="container">
+        <h2>Technical Focus</h2>
+        <p>Core technical areas and hands-on exposure.</p>
+
+        <div class="grid">
+          <div class="card">
+            <h3>Networking</h3>
+            <p>Network fundamentals, segmentation concepts, secure Wi-Fi planning, and practical troubleshooting.</p>
+          </div>
+
+          <div class="card">
+            <h3>Systems &amp; Virtualization</h3>
+            <p>Windows environments, Ubuntu VM lab (Hyper-V), device administration, and structured lab testing.</p>
+          </div>
+
+          <div class="card">
+            <h3>Endpoint Management</h3>
+            <p>ManageEngine Endpoint Central, mobile device management, policy deployment, and device configuration.</p>
+          </div>
+
+          <div class="card">
+            <h3>Security Exposure</h3>
+            <p>Endpoint monitoring, configuration hardening, structured device policies, and operational risk awareness.</p>
+          </div>
         </div>
-        <p>
-          Worked with ManageEngine Endpoint Central and mobile device management systems. 
-          Contributed to 50+ device configurations and supported endpoint monitoring and 
-          structured device policy deployment.
-        </p>
       </div>
-
-    </div>
-  </div>
-</section>
-<section class="section" id="education">
-  <div class="container">
-    <h2>Education</h2>
-    <p>Formal training in systems, networking, and IT infrastructure.</p>
-
-    <div class="list">
-
-      <div class="item">
-        <div class="row">
-          <div class="role">Computer Systems Technology (Advanced Diploma)</div>
-          <div class="when">George Brown College • 2026–Ongoing</div>
-        </div>
-        <p>
-          Focused on systems architecture, networking fundamentals, infrastructure, and applied technical labs.
-        </p>
-      </div>
-
-      <div class="item">
-        <div class="row">
-          <div class="role">Computer & Information Sciences (Support Services)</div>
-          <div class="when">British Columbia Institute of Technology • 2022–2023</div>
-        </div>
-        <p>
-          Practical training in Active Directory, network administration, device support, and enterprise IT environments.
-        </p>
-      </div>
-
-    </div>
-  </div>
-</section>
-
-<section class="section" id="technical">
-  <div class="container">
-    <h2>Technical Focus</h2>
-    <p>Core technical areas and hands-on exposure.</p>
-
-    <div class="grid">
-
-      <div class="card">
-        <h3>Networking</h3>
-        <p>
-          Network fundamentals, segmentation concepts, secure Wi-Fi planning, and practical troubleshooting.
-        </p>
-      </div>
-
-      <div class="card">
-        <h3>Systems & Virtualization</h3>
-        <p>
-          Windows environments, Ubuntu VM lab (Hyper-V), device administration, and structured lab testing.
-        </p>
-      </div>
-
-      <div class="card">
-        <h3>Endpoint Management</h3>
-        <p>
-          ManageEngine Endpoint Central, mobile device management, policy deployment, and device configuration.
-        </p>
-      </div>
-
-      <div class="card">
-        <h3>Security Exposure</h3>
-        <p>
-          Endpoint monitoring, configuration hardening, structured device policies, and operational risk awareness.
-        </p>
-      </div>
-
-    </div>
-  </div>
-</section>
-
+    </section>
 
     <section class="section" id="contact">
       <div class="container">
@@ -286,20 +288,8 @@
 
         <div class="actions">
           <a class="btn primary" href="mailto:gungortarik@icloud.com">Email</a>
-          <a class="btn" 
-   href="https://linkedin.com/in/tarikgungor" 
-   target="_blank" 
-   rel="noopener">
-   LinkedIn
-</a>
-
-<a class="btn" 
-   href="https://github.com/gungortarik" 
-   target="_blank" 
-   rel="noopener">
-   GitHub
-</a>
-
+          <a class="btn" href="https://linkedin.com/in/tarikgungor" target="_blank" rel="noopener">LinkedIn</a>
+          <a class="btn" href="https://github.com/gungortarik" target="_blank" rel="noopener">GitHub</a>
         </div>
       </div>
     </section>
@@ -312,7 +302,31 @@
   </main>
 
   <script>
+    // footer year
     document.getElementById("y").textContent = new Date().getFullYear();
+
+    // theme toggle
+    const toggleBtn = document.getElementById("themeToggle");
+    const iconEl = toggleBtn.querySelector(".icon");
+    const labelEl = toggleBtn.querySelector(".label");
+
+    function applyTheme(mode) {
+      const isLight = mode === "light";
+      document.body.classList.toggle("light", isLight);
+      localStorage.setItem("theme", isLight ? "light" : "dark");
+
+      iconEl.textContent = isLight ? "☀" : "☾";
+      labelEl.textContent = isLight ? "Light" : "Dark";
+    }
+
+    // load preference
+    const saved = localStorage.getItem("theme");
+    applyTheme(saved === "light" ? "light" : "dark");
+
+    toggleBtn.addEventListener("click", () => {
+      const next = document.body.classList.contains("light") ? "dark" : "light";
+      applyTheme(next);
+    });
   </script>
 </body>
 </html>
