Update styles and hero trust strip

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
   <main id="top">
     <section class="hero">
       <div class="container hero-wrap">
+
         <div class="hero-left">
           <h1>Tarik Gungor</h1>
           <div class="title">IT Support &amp; Infrastructure-Focused Technologist</div>
@@ -70,12 +71,20 @@
           <div class="actions">
             <a class="btn primary" href="#projects">View Projects</a>
             <a class="btn" href="#contact">Contact</a>
+            <a class="btn" href="assets/docs/Tarik_Gungor_Resume.pdf" target="_blank" rel="noopener">Resume</a>
+          </div>
+
+          <div class="hero-trust" aria-label="Highlights">
+            <span>50+ Endpoint Configurations</span>
+            <span>Network Segmentation</span>
+            <span>Ubuntu VM Lab</span>
           </div>
         </div>
 
         <div class="hero-right">
           <img class="avatar" src="assets/img/profile.jpg" alt="Tarik Gungor" />
         </div>
+
       </div>
     </section>
 
@@ -137,48 +146,47 @@
         <p>Short, clear case studies — built to be easy to review for recruiters and technical teams.</p>
 
         <div class="grid">
+          <div class="card">
+            <h3>Home Server Infrastructure</h3>
+            <p>Private cloud + media stack planning with a reliability-first mindset.</p>
+            <div class="meta">
+              <span class="pill accent">Architecture</span>
+              <span class="pill">Storage</span>
+              <span class="pill">Remote Access</span>
+            </div>
+          </div>
 
-  <div class="card">
-    <h3>Home Server Infrastructure</h3>
-    <p>Private cloud + media stack planning with a reliability-first mindset.</p>
-    <div class="meta">
-      <span class="pill accent">Architecture</span>
-      <span class="pill">Storage</span>
-      <span class="pill">Remote Access</span>
-    </div>
-  </div>
+          <div class="card">
+            <h3>Café Network Segmentation</h3>
+            <p>Staff vs guest network separation with operational constraints and security considerations.</p>
+            <div class="meta">
+              <span class="pill accent">Networking</span>
+              <span class="pill">Security</span>
+              <span class="pill">Wi-Fi</span>
+            </div>
+          </div>
 
-  <div class="card">
-    <h3>Café Network Segmentation</h3>
-    <p>Staff vs guest network separation with operational constraints and security considerations.</p>
-    <div class="meta">
-      <span class="pill accent">Networking</span>
-      <span class="pill">Security</span>
-      <span class="pill">Wi-Fi</span>
-    </div>
-  </div>
+          <div class="card">
+            <h3>Ubuntu VM Lab Environment</h3>
+            <p>A repeatable learning lab for Linux fundamentals and infrastructure practice.</p>
+            <div class="meta">
+              <span class="pill accent">Linux</span>
+              <span class="pill">Hyper-V</span>
+              <span class="pill">Automation</span>
+            </div>
+          </div>
 
-  <div class="card">
-    <h3>Ubuntu VM Lab Environment</h3>
-    <p>A repeatable learning lab for Linux fundamentals and infrastructure practice.</p>
-    <div class="meta">
-      <span class="pill accent">Linux</span>
-      <span class="pill">Hyper-V</span>
-      <span class="pill">Automation</span>
-    </div>
-  </div>
-
-  <div class="card">
-    <h3>Personal Website</h3>
-    <p>This site — minimal, premium, and documentation-driven.</p>
-    <div class="meta">
-      <span class="pill">HTML/CSS</span>
-      <span class="pill">GitHub Pages</span>
-      <span class="pill">Brand</span>
-    </div>
-  </div>
-
-</div>
+          <div class="card">
+            <h3>Personal Website</h3>
+            <p>This site — minimal, premium, and documentation-driven.</p>
+            <div class="meta">
+              <span class="pill">HTML/CSS</span>
+              <span class="pill">GitHub Pages</span>
+              <span class="pill">Brand</span>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
     <section class="section" id="experience">
@@ -331,3 +339,5 @@
   </script>
 </body>
 </html>
+
+bunu aynen duzeltilmis versiyonunu ver bende kopyaliyp yapistirayim. sadece duzgun kod ver yeter.
