new update preview

--- a/index.html
+++ b/index.html
@@ -14,6 +14,18 @@
   <meta property="og:description" content="IT Support &amp; infrastructure-focused technologist. Projects, experience, and contact." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://tarikgungor.com/" />
+  <!-- Open Graph -->
+<meta property="og:title" content="Tarik Gungor — IT Support & Infrastructure Specialist" />
+<meta property="og:description" content="Systems • Networking • Endpoint Management — Toronto, Canada" />
+<meta property="og:image" content="https://tarikgungor.com/assets/img/preview.jpg" />
+<meta property="og:url" content="https://tarikgungor.com/" />
+<meta property="og:type" content="website" />
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Tarik Gungor — IT Support & Infrastructure Specialist" />
+<meta name="twitter:description" content="Systems • Networking • Endpoint Management — Toronto, Canada" />
+<meta name="twitter:image" content="https://tarikgungor.com/assets/img/preview.jpg" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
