--- a/index.html
+++ b/index.html
@@ -3,30 +3,38 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Tarik Gungor</title>
+  <title>Tarik Gungor — IT Support & Infrastructure Specialist</title>
 
   <link rel="icon" type="image/svg+xml" href="assets/img/favicon-v2.svg" />
+  <link rel="canonical" href="https://tarikgungor.com/" />
 
-  <meta name="description" content="Tarik Gungor — IT Support &amp; Infrastructure-Focused Technologist. Bridging technology, infrastructure, and real-world business operations." />
+  <!-- Primary SEO -->
+  <meta
+    name="description"
+    content="Tarik Gungor is an IT Support & Infrastructure Specialist based in Toronto, Canada, focused on systems administration, networking, endpoint management, and practical business-driven IT operations."
+  />
   <meta name="theme-color" content="#0e0e0e" />
 
-  <meta property="og:title" content="Tarik Gungor — IT Support &amp; Infrastructure" />
-  <meta property="og:description" content="IT Support &amp; infrastructure-focused technologist. Projects, experience, and contact." />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://tarikgungor.com/" />
   <!-- Open Graph -->
-<meta property="og:title" content="Tarik Gungor — IT Support & Infrastructure Specialist" />
-<meta property="og:description" content="Systems • Networking • Endpoint Management — Toronto, Canada" />
-<meta property="og:image" content="https://tarikgungor.com/assets/img/preview.jpg" />
-<meta property="og:url" content="https://tarikgungor.com/" />
-<meta property="og:type" content="website" />
+  <meta property="og:title" content="Tarik Gungor — IT Support & Infrastructure Specialist" />
+  <meta
+    property="og:description"
+    content="IT Support & Infrastructure Specialist based in Toronto, Canada. Focused on systems administration, networking, endpoint management, and practical business-driven IT operations."
+  />
+  <meta property="og:image" content="https://tarikgungor.com/assets/img/preview.jpg" />
+  <meta property="og:url" content="https://tarikgungor.com/" />
+  <meta property="og:type" content="website" />
 
-<!-- Twitter Card -->
-<meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:title" content="Tarik Gungor — IT Support & Infrastructure Specialist" />
-<meta name="twitter:description" content="Systems • Networking • Endpoint Management — Toronto, Canada" />
-<meta name="twitter:image" content="https://tarikgungor.com/assets/img/preview.jpg" />
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Tarik Gungor — IT Support & Infrastructure Specialist" />
+  <meta
+    name="twitter:description"
+    content="IT Support & Infrastructure Specialist based in Toronto, Canada. Focused on systems administration, networking, endpoint management, and practical business-driven IT operations."
+  />
+  <meta name="twitter:image" content="https://tarikgungor.com/assets/img/preview.jpg" />
 
+  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;700;800&display=swap" rel="stylesheet" />
