--- a/index.html
+++ b/index.html
@@ -57,6 +57,14 @@
     ]
   }
   </script>
+<!-- Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-635W5YR4GW"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-635W5YR4GW');
+  </script>  
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
