--- a/index.html
+++ b/index.html
@@ -138,12 +138,9 @@
           </div>
 
           <div class="hero-trust" aria-label="Highlights">
-            <span>50+ Endpoint Configurations</span>
-            <span>Network Segmentation</span>
-            <span>Ubuntu VM Lab</span>
-            <span>38 Devices (BETA PREP)</span>
-            <span>23 Devices (Bestof Floor)</span>
-          </div>
+         <span>50+ Endpoint Configurations</span>
+         <span>Network Segmentation</span>
+</div>
         </div>
 
         <div class="hero-right">
@@ -233,12 +230,12 @@
           </div>
 
           <div class="card">
-            <h3>Ubuntu VM Lab Environment</h3>
-            <p>A repeatable learning lab for Linux fundamentals and infrastructure practice.</p>
+            <h3>Endpoint Management Lab</h3>
+            <p>Device configuration, monitoring, and policy deployment using ManageEngine Endpoint Central.</p>
             <div class="meta">
-              <span class="pill accent">Linux</span>
-              <span class="pill">Hyper-V</span>
-              <span class="pill">Automation</span>
+              <span class="pill accent">Endpoint Management</span>
+              <span class="pill">Device Configuration</span>
+              <span class="pill">Policy Deployment</span>
             </div>
           </div>
 
@@ -256,47 +253,72 @@
     </section>
 
     <!-- EXPERIENCE -->
-    <section class="section" id="experience">
-      <div class="container">
-        <h2>Experience</h2>
-        <p>Professional IT and infrastructure-focused roles.</p>
+   <section id="experience" class="experience-section">
+  <div class="container">
+    <h2 class="section-title">Experience</h2>
 
-        <div class="list">
-          <div class="item">
-            <div class="row">
-              <div class="role">IT Specialist</div>
-              <div class="when">BETA PREP • Toronto • Dec 2024 – Present</div>
-            </div>
-            <p>
-              Supporting internal systems, operational workflows, and infrastructure reliability in a hybrid business
-              environment (38 devices).
-            </p>
-          </div>
+    <div class="timeline">
 
-          <div class="item">
-            <div class="row">
-              <div class="role">IT Support Specialist</div>
-              <div class="when">Bestof Floor LTD • Sep 2023 – Present</div>
-            </div>
-            <p>
-              Network administration support, device management, and day-to-day technical troubleshooting across
-              business operations (23 devices).
-            </p>
-          </div>
-
-          <div class="item">
-            <div class="row">
-              <div class="role">IT Analyst (Internship)</div>
-              <div class="when">Payment Source • Apr 2023 – Jul 2023</div>
-            </div>
-            <p>
-              Used ManageEngine Endpoint Central and MDM systems. Contributed to 50+ device configurations and supported
-              endpoint monitoring and structured device policy deployment.
-            </p>
-          </div>
+      <!-- ITEM 1 -->
+      <div class="timeline-item">
+        <div class="timeline-dot"></div>
+        <div class="timeline-content">
+          <span class="timeline-date">Dec 2024 – Present</span>
+          <h3>IT Specialist — BETA PREP</h3>
+          <p class="timeline-meta">Contract · Hybrid · Toronto, ON</p>
+          <ul>
+            <li>Infrastructure & endpoint oversight for fulfillment operations</li>
+            <li>Operational IT support across warehouse systems</li>
+          </ul>
         </div>
       </div>
-    </section>
+
+      <!-- ITEM 2 -->
+      <div class="timeline-item">
+        <div class="timeline-dot"></div>
+        <div class="timeline-content">
+          <span class="timeline-date">Dec 2023 – Present</span>
+          <h3>Information Technology Technician — Torontonian Flooring</h3>
+          <p class="timeline-meta">Contract · Hybrid · Toronto, ON</p>
+          <ul>
+            <li>On-site IT support & device configuration</li>
+            <li>Network troubleshooting & systems support</li>
+          </ul>
+        </div>
+      </div>
+
+      <!-- ITEM 3 -->
+      <div class="timeline-item">
+        <div class="timeline-dot"></div>
+        <div class="timeline-content">
+          <span class="timeline-date">Sep 2023 – Present</span>
+          <h3>IT Support Specialist — Bestof Floor LTD</h3>
+          <p class="timeline-meta">Contract · Hybrid · Toronto, ON</p>
+          <ul>
+            <li>Network administration & segmentation</li>
+            <li>Endpoint configuration & support</li>
+          </ul>
+        </div>
+      </div>
+
+      <!-- ITEM 4 -->
+      <div class="timeline-item">
+        <div class="timeline-dot"></div>
+        <div class="timeline-content">
+          <span class="timeline-date">Apr 2023 – Jul 2023</span>
+          <h3>IT Analyst — Payment Source</h3>
+          <p class="timeline-meta">Internship · Hybrid · Toronto, ON</p>
+          <ul>
+            <li>Managed Endpoint Central & Mobile Device Management</li>
+            <li>Deployed 50+ device configurations</li>
+            <li>System monitoring & hardware support</li>
+          </ul>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
 
     <!-- VOLUNTEER -->
     <section class="section" id="volunteer">
